# arkworks-solidity-verifier

./: Cargo.toml  README.md
src/: constants.rs  lib.rs  tests.rs  utils.rs
src/pairings/: bn254.rs
src/schemes/: gm17.rs  groth16.rs  marlin.rs  mod.rs
src/schemes/marlin/: marlin_pc.rs  mod.rs
