[package]
name = "arkworks-solidity-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Proving Schemes
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-gm17 = { version = "^0.3.0", default-features = false }
ark-marlin = { version = "^0.3.0", default-features = false }

# Parings
ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }

ark-snark = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-poly-commit = { version = "^0.3.0", default-features = false }

digest = "0.9"
regex = "1.7.1"
