[package]
name = "arkworks-solidity-verifier"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Tetration-Lab/arkworks-solidity-verifier"
keywords = ["verifier", "solidity", "zk-snarks", "zero-knowledge", "crypto"]
description = "Solidity SNARK verifier generator for Arkwork's proof systems."
license = "LGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Proving Schemes
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-gm17 = { version = "^0.3.0", default-features = false }
ark-marlin = { version = "^0.3.0", default-features = false }

# Parings
ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }

ark-snark = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-poly-commit = { version = "^0.3.0", default-features = false }

digest = "0.9"
regex = "1.7.1"
hex = "0.4.3"

[dev-dependencies]
ark-relations = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }
